Removed hacks around XSLTransformer. Changed some propertie-names, and property-include also the build.properties from the 'base' build (so, the properties must have the same name). Excluded also mmbase4managers.fo from build, because it does not work. BTW, is fop really the best we can get?